## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.4 no-dependencies

templatedir = $(pkgdatadir)/template

template_DATA = \
	NMZ.body \
	NMZ.body.ja \
	NMZ.foot \
	NMZ.foot.ja \
	NMZ.head \
	NMZ.head.ja \
	NMZ.result.normal \
	NMZ.result.short \
	NMZ.result.normal.ja \
	NMZ.result.short.ja \
	NMZ.tips \
	NMZ.tips.ja

EXTRA_DIST = $(template_DATA)