## Process this file with automake to produce Makefile.in
EXTRA_DIST  = acrobat3.pdf \
	      excel97.xls \
	      html.html \
	      mail-multipart.txt \
	      mail.txt \
	      man.1 \
	      msg00000.html \
	      plain.txt \
	      plain.txt.Z \
	      plain.txt.bz2 \
	      plain.txt.gz \
	      rfc0000.txt \
	      tex.tex \
	      word97.doc \
	      powerpoint97.ppt \
	      postscript.ps
