## Process this file with automake to produce Makefile.in
EXTRA_DIST  =   README.TXT \
		acrobat3.pdf \
		acrobat4.pdf \
		excel5.xls \
		excel98.xls \
		plain.txt \
		powerpoint4.ppt \
		simpletext.txt \
		textedit.rtf \
		word6.doc \
		word98.doc \
		excel2001.xls \
		powerpoint2001.pps \
		powerpoint2001.ppt \
		word2001.doc \
		word95.doc \
		excel2001.htm \
		excel5-2001.xls \
		excel95.xls \
		powerpoint2001.rtf \
		powerpoint4_0.ppt \
		word.txt \
		word2001.htm \
		word2001.rtf
