## Process this file with automake to produce Makefile.in
EXTRA_DIST  =   acrobat3.pdf \
		acrobat4.pdf \
		d20000220.hnf \
		excel5.xls \
		excel95.xls \
		excel97.xls \
		excel98.xls \
		html.html \
		taro4.jsw \
		taro5.jaw \
		taro6.jbw \
	        taro7.jfw \
                taro8.jtd \
		mail-multipart.txt \
		mail.txt \
		man.1 \
		msg00000.html \
		plain.txt \
		plain.txt.Z \
		plain.txt.bz2 \
		plain.txt.gz \
		rfc0000.txt \
		tex.tex \
		word6.doc \
		word95.doc \
		word97.doc \
		word98.doc \
		word2000.doc \
		powerpoint97.ppt \
		powerpoint2002.pps \
		powerpoint2002.ppt \
		powerpoint2002.rtf \
		postscript.ps \
	        dvi.dvi \
                rtf.rtf \
                rpm.rpm \
                oowriter.sxw \
                oocalc.sxc \
                oodraw.sxd \
                ooimpress.sxi \
	        apachecache.txt \
	        hdml.hdml \
		ID3v1.mp3 \
		ID3v2.mp3
